NIFI-14082 Updated more Processors with standard Properties and Relationships collections (#9583)
Signed-off-by: David Handermann <exceptionfactory@apache.org>