@@ -46,10 +46,7 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.OptionalInt;
@@ -70,7 +67,7 @@ import static org.apache.nifi.processors.network.parser.Netflowv5Parser.getRecor
 public class ParseNetflowv5 extends AbstractProcessor {
     private String destination;
     // Add mapper
-    private static final ObjectMapper mapper = new ObjectMapper();
+    private static final ObjectMapper MAPPER = new ObjectMapper();
 
     public static final String FLOWFILE_CONTENT = "flowfile-content";
     public static final String FLOWFILE_ATTRIBUTE = "flowfile-attribute";
@@ -89,8 +86,15 @@ public class ParseNetflowv5 extends AbstractProcessor {
     public static final Relationship REL_SUCCESS = new Relationship.Builder().name("success")
             .description("Any FlowFile that is successfully parsed as a netflowv5 data will be transferred to this Relationship.").build();
 
-    public static final List<PropertyDescriptor> PROPERTIES = Collections.unmodifiableList(Arrays.asList(FIELDS_DESTINATION));
-    public static final Set<Relationship> RELATIONSHIPS = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(REL_FAILURE, REL_ORIGINAL, REL_SUCCESS)));
+    public static final List<PropertyDescriptor> PROPERTIES = List.of(
+            FIELDS_DESTINATION
+    );
+
+    public static final Set<Relationship> RELATIONSHIPS = Set.of(
+            REL_FAILURE,
+            REL_ORIGINAL,
+            REL_SUCCESS
+    );
 
     @Override
     public Set<Relationship> getRelationships() {
@@ -164,10 +168,10 @@ public class ParseNetflowv5 extends AbstractProcessor {
         FlowFile recordFlowFile = flowFile;
         int record = 0;
         while (numberOfRecords-- > 0) {
-            ObjectNode results = mapper.createObjectNode();
+            ObjectNode results = MAPPER.createObjectNode();
             // Add Port number and message format
-            results.set("port", mapper.valueToTree(parser.getPortNumber()));
-            results.set("format", mapper.valueToTree("netflowv5"));
+            results.set("port", MAPPER.valueToTree(parser.getPortNumber()));
+            results.set("format", MAPPER.valueToTree("netflowv5"));
 
             recordFlowFile = session.create(flowFile);
             // Add JSON Objects
@@ -177,7 +181,7 @@ public class ParseNetflowv5 extends AbstractProcessor {
                 @Override
                 public void process(OutputStream out) throws IOException {
                     try (OutputStream outputStream = new BufferedOutputStream(out)) {
-                        outputStream.write(mapper.writeValueAsBytes(results));
+                        outputStream.write(MAPPER.writeValueAsBytes(results));
                     }
                 }
             });
@@ -216,22 +220,22 @@ public class ParseNetflowv5 extends AbstractProcessor {
     }
 
     private void generateJSONUtil(final ObjectNode results, final Netflowv5Parser parser, final int record) {
-        final ObjectNode header = mapper.createObjectNode();
+        final ObjectNode header = MAPPER.createObjectNode();
 
         // Process KVs of the Flow Header fields
         String fieldname[] = getHeaderFields();
         Object fieldvalue[] = parser.getHeaderData();
         for (int i = 0; i < fieldname.length; i++) {
-            header.set(fieldname[i], mapper.valueToTree(fieldvalue[i]));
+            header.set(fieldname[i], MAPPER.valueToTree(fieldvalue[i]));
         }
         results.set("header", header);
 
-        final ObjectNode data = mapper.createObjectNode();
+        final ObjectNode data = MAPPER.createObjectNode();
         // Process KVs of the Flow Record fields
         fieldname = getRecordFields();
         fieldvalue = parser.getRecordData()[record];
         for (int i = 0; i < fieldname.length; i++) {
-            data.set(fieldname[i], mapper.valueToTree(fieldvalue[i]));
+            data.set(fieldname[i], MAPPER.valueToTree(fieldvalue[i]));
         }
         results.set("record", data);
     }
