@@ -100,7 +100,7 @@ public class TestScriptedFilterRecord extends TestScriptedRouterProcessor {
 
     private void thenMatchingFlowFileContains(final Object[]... records) {
         testRunner.assertTransferCount(ScriptedFilterRecord.RELATIONSHIP_SUCCESS, 1);
-        final MockFlowFile resultFlowFile = testRunner.getFlowFilesForRelationship(ScriptedFilterRecord.RELATIONSHIP_SUCCESS).get(0);
+        final MockFlowFile resultFlowFile = testRunner.getFlowFilesForRelationship(ScriptedFilterRecord.RELATIONSHIP_SUCCESS).getFirst();
         assertEquals(givenExpectedFlowFile(records), resultFlowFile.getContent());
         assertEquals("text/plain", resultFlowFile.getAttribute("mime.type"));
 
