@@ -34,9 +34,6 @@ public class TestConsumeTwitter {
 
     private TestRunner runner;
 
-    private final String SAMPLE_TWEET = "{\"data\":{\"id\":\"123\",\"text\":\"This is a sample tweet and is not real!\"}}";
-    private final String EXPECTED_TWEET = "[{\"data\":{\"id\":\"123\",\"text\":\"This is a sample tweet and is not real!\"}}]";
-
     @BeforeEach
     public void setRunnerAndAPI() {
         mockWebServer = new MockWebServer();
@@ -55,10 +52,11 @@ public class TestConsumeTwitter {
 
     @Test
     @Timeout(60)
-    public void testReceiveSingleTweetInStream() throws InterruptedException {
+    public void testReceiveSingleTweetInStream() {
+        String sampleTweet = "{\"data\":{\"id\":\"123\",\"text\":\"This is a sample tweet and is not real!\"}}";
         MockResponse response = new MockResponse()
                 .setResponseCode(200)
-                .setBody(SAMPLE_TWEET)
+                .setBody(sampleTweet)
                 .addHeader("Content-Type", "application/json");
         mockWebServer.enqueue(response);
 
@@ -74,15 +72,16 @@ public class TestConsumeTwitter {
         // processor, so the test will timeout after 60 seconds.
         runner.run(1, false, true);
 
-        while (runner.getFlowFilesForRelationship(ConsumeTwitter.REL_SUCCESS).size() == 0) {
+        while (runner.getFlowFilesForRelationship(ConsumeTwitter.REL_SUCCESS).isEmpty()) {
             runner.run(1, false, false);
         }
         runner.stop();
 
         // there should only be a single FlowFile containing a tweet
         runner.assertTransferCount(ConsumeTwitter.REL_SUCCESS, 1);
-        MockFlowFile flowFile = runner.getFlowFilesForRelationship(ConsumeTwitter.REL_SUCCESS).get(0);
-        flowFile.assertContentEquals(EXPECTED_TWEET);
+        MockFlowFile flowFile = runner.getFlowFilesForRelationship(ConsumeTwitter.REL_SUCCESS).getFirst();
+        String expectedTweet = "[{\"data\":{\"id\":\"123\",\"text\":\"This is a sample tweet and is not real!\"}}]";
+        flowFile.assertContentEquals(expectedTweet);
         flowFile.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "application/json");
         flowFile.assertAttributeEquals("tweets", "1");
     }
